fix language switcher flickering

--- a/src/widgets/LanguageSwitcher/ui/LanguageSwitcher.module.scss
+++ b/src/widgets/LanguageSwitcher/ui/LanguageSwitcher.module.scss
@@ -1,4 +1,5 @@
 .LanguageSwitcher {
+	min-width: 80px;
 	color: var(--active-nav-link);
 	text-transform: uppercase;
 }
